# sd-online-auction-backend-mvp

./: .env.example  .gitignore  AGENTS.md  DEPLOY.md  DESIGN.md  Dockerfile  KICKOFF.md  README.md  alembic.ini  design.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: write_workflows.py
.github/workflows/: ci.yml  functional.yml  lint.yml
alembic/: env.py
alembic/versions/: 001_initial.py
docs/: mvp-scope.md  system-design.md
src/auction_app/: __init__.py  config.py  database.py  main.py  redis_client.py
src/auction_app/models/: __init__.py  auction.py  bid.py  proxy_bid.py  user.py
src/auction_app/routers/: auctions.py  bids.py  health.py  search.py  users.py  websocket.py
src/auction_app/schemas/: auction.py  bid.py  search.py  user.py
src/auction_app/services/: auction_service.py  bid_service.py  fanout_service.py  scheduler_service.py  search_service.py
tests/: conftest.py  test_auction_service.py  test_bid_service.py  test_fanout_service.py  test_search_service.py
verify/: manifest.env
verify/acceptance/: conftest.py  test_fr4_bid_history.py  test_fr6_winner_determination.py  test_fr7_websocket_updates.py  test_functional.py
