[build-system]
requires = ["setuptools>=75,<83"]
build-backend = "setuptools.build_meta"

[project]
name = "auction-app"
version = "0.1.0"
description = "Online Auction MVP — FastAPI + PostgreSQL + Redis"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.30,<1.0",
    "redis[hiredis]>=5.2,<6.0",
    "pydantic-settings>=2.7,<3.0",
    "pydantic>=2.10,<3.0",
    "apscheduler>=3.11,<4.0",
    "alembic>=1.14,<2.0",
    "websockets>=13.0,<15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.25,<1.0",
    "httpx>=0.28,<1.0",
    "ruff>=0.9,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
